--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,8 @@ jobs:
           key: deps2-{{ checksum "requirements/dev.txt" }}
       - run:
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
+            #python3 -m venv venv
+            #. venv/bin/activate
             pip install -r requirements/dev.txt
       - save_cache:
           key: deps2-{{ checksum "requirements/dev.txt" }}
