--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,82 +1,38 @@
+# This config was automatically generated from your source code
+# Stacks detected: deps:python:.
 version: 2.1
-
-#########
-# Common
-#########
 orbs:
-  heroku: circleci/heroku@1.0.1
-
-############
-# Workflows
-############
-workflows:
-  version: 2
-  build-deploy:
-    jobs:
-      - build
-      - deploy:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
-
-##################
-# Job Definitions
-##################
+  python: circleci/python@2
 jobs:
-  build:
-    docker:
-      - image: circleci/python:3.6.2-stretch-browsers
-        environment:
-          FLASK_CONFIG: testing
-          TEST_DATABASE_URL: postgresql://ubuntu@localhost/circle_test?sslmode=disable
-      - image: circleci/postgres:9.6.5-alpine-ram
-        environment:
-          POSTGRES_USER: ubuntu
-          POSTGRES_DB: circle_test
-          POSTGRES_PASSWORD: ''
+  test-python:
+    # Install dependencies and run tests
+    executor: python/default
     steps:
       - checkout
-      - run: mkdir test-reports
+      - python/install-packages:
+          pkg-manager: pip
+      - python/install-packages:
+          args: pytest
+          pkg-manager: pip
+          pypi-cache: false
       - run:
-          name: Download Selenium
-          command: |
-            curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
-      - run:
-          name: Start Selenium
-          command: |
-            java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
-          background: true
-      - restore_cache:
-          key: deps2-{{ checksum "requirements/dev.txt" }}
-      - run:
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      - save_cache:
-          key: deps2-{{ checksum "requirements/dev.txt" }}
-          paths:
-            - 'venv'
-      - run:
-          command: |
-            . venv/bin/activate
-            python manage.py test
-      - store_artifacts:
-          path: test-reports/
-          destination: tr1
+          name: Run tests
+          command: pytest --junitxml=junit.xml
       - store_test_results:
-          path: test-reports/
-
+          path: junit.xml
   deploy:
-    executor: heroku/default
+    # This is an example deploy job, not actually used by the workflow
+    docker:
+      - image: cimg/base:stable
     steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints:
-            - '48:a0:87:54:ca:75:32:12:c6:9e:a2:77:a4:7a:08:a4'
-      - heroku/install
-      - heroku/deploy-via-git:
-          force: true
-
+      # Replace this with steps to deploy to users
+      - run:
+          name: deploy
+          command: '#e.g. ./deploy.sh'
+workflows:
+  ci:
+    jobs:
+      - test-python
+    # - deploy:
+    #     requires:
+    #       - test-python
